<resources>
    <string name="app_name">trivia-android</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question:45/89</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="placeholder">here will be text to be shown</string>
    <string name="correct_answer">correct</string>
    <string name="wrong_answer">wrong</string>
    <string name="text_formated">Question: %d/%d</string>
</resources>